# Arthya

./: README.md
backend/: .env.example  MIGRATION_TO_POSTGRESQL.md  nodemon.json  package.json  tsconfig.json
backend/src/: server.ts
ml/: .env  dataGenerator.py  featureExtraction.py  features_a.csv  features_b.csv  features_c.csv  inference.py  main.py  prophetLSTM_training.ipynb  pyproject.toml
ml/uploads/: features.csv  input.csv  predictions.csv
mobile/: package-lock.json  package.json
mobile/app/: _layout.tsx  add-transaction.tsx  chat.tsx  login.tsx
mobile/app/(tabs)/: _layout.tsx  analytics.tsx  charts.tsx  index.tsx
mobile/contexts/: AuthContext.tsx
mobile/services/: api.ts
mobile/types/: api.ts
